<resources>
    <string name="app_name">Road</string>

    <string name="title_section1">Home</string>
    <string name="title_section2">Settings</string>
    <string name="title_section3">Readme</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="label_home_time">Time:</string>
    <string name="label_home_accelerometer_x">Accelerometer X:</string>
    <string name="label_home_accelerometer_y">Accelerometer Y:</string>
    <string name="label_home_accelerometer_z">Accelerometer Z:</string>
    <string name="label_home_longitude">Longitude:</string>
    <string name="label_home_latitude">Latitude:</string>
    <string name="label_home_device">Device:</string>

    <string name="action_settings">Settings</string>
    <string name="settings_server_label">Server</string>
    <string name="settings_server_value">192.168.2.100:9000</string>
    <string name="settings_longitudinal_wheelbase_label">Longitudinal Wheelbase</string>
    <string name="settings_transverse_wheelbase_label">Transverse Wheelbase</string>
    <string name="settings_longitudinal_wheelbase_value">3.0</string>
    <string name="settings_transverse_wheelbase_value">2.0</string>
    <string name="settings_unit_meter">m</string>
    <string name="settings_device_id_value">1</string>
    <string name="settings_device_id_label">Device ID</string>
    <string name="set">Set</string>
    <string name="refresh">Show Settings</string>


    <string name="default_longitude">0</string>
    <string name="default_latitude">0</string>


    <string name="sensor_package_collect">200</string>
    <string name="sensor_package_total">500</string>
    <string name="hello_blank_fragment">hello</string>
    <string name="label_home_server">Server:</string>
    <string name="label_home_longitudinal">Longitudinal</string>
    <string name="label_home_transverse">Transverse:</string>
    <string name="label_home_last_depth">Last Depth:</string>
    <string name="label_home_section_common">Common</string>
    <string name="label_home_section_surrounding_holes">Surrounding Holes</string>
    <string name="label_home_last_diameter">Last Diameter:</string>
    <string name="label_home_runtime_all_var">All Variance:</string>
    <string name="label_home_runtime_last_var">Last Variance:</string>
    <string name="label_home_runtime_passing_hole_count">Passing Hole Count:</string>
    <string name="label_home_runtime_is_passing_hole">Is Passing Hole:</string>
    <string name="label_home_runtime_data_cached">Data Cached:</string>
    <string name="label_home_entry_ratio_y">Entry Ratio Y:</string>
    <string name="label_home_entry_ratio_x">Entry Ratio X:</string>
    <string name="label_home_velocity">Velocity:</string>
    <string name="label_home_loc_type">Location Type:</string>
    <string name="label_home_direction">Direction:</string>
    <string name="label_settings_entry_ratio_y">Entry Ratio X</string>
    <string name="edit_text_settings_entry_ratio_y_value">0.5</string>
    <string name="edit_text_settings_entry_ratio_x_value">0.5</string>
    <string name="label_settings_entry_ratio_x">Entry Ratio X</string>


</resources>
