<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.edu.sjtu.road.SettingsFragment">

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:id="@+id/settings_device_id_label"
                android:text="@string/settings_device_id_label" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:id="@+id/settings_device_id_value"
                android:text="@string/settings_device_id_value"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:id="@+id/settings_server_label"
                android:text="@string/settings_server_label" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:id="@+id/settings_server_value"
                android:text="@string/settings_server_value"
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_longitudinal_wheelbase_label"
                android:id="@+id/settings_longitudinal_wheelbase_label"
                android:layout_column="0" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/settings_longitudinal_wheelbase_value"
                android:layout_column="1"
                android:inputType="number"
                android:text="@string/settings_longitudinal_wheelbase_value" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_unit_meter"
                android:id="@+id/settings_unit_meter_0"
                android:layout_column="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_transverse_wheelbase_label"
                android:id="@+id/settings_transverse_wheelbase_label"
                android:layout_column="0" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/settings_transverse_wheelbase_value"
                android:layout_column="1"
                android:inputType="number"
                android:text="@string/settings_transverse_wheelbase_value" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_unit_meter"
                android:id="@+id/settings_unit_meter_1"
                android:layout_column="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set"
                android:id="@+id/buttonSet"
                android:layout_column="0"
                android:onClick="onButtonSetPressed" />
        </TableRow>
    </TableLayout>

</FrameLayout>
